# neote

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  download-fonts.sh  download_markdown_grammar.sh  flake.nix  manual_install_markdown.sh  package-lock.json  package.json  rustfmt.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  codeql.yml  release-drafter.yml  security-audit.yml  welcome-pr.yml
ai/: Cargo.toml
ai/ai-agent/src/: lib.rs
apps/ai-daemon/src/: lib.rs  main.rs
apps/desktop/: Cargo.toml  README.md  build.rs  check-setup.js  fix-permissions.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  run.sh  setup.sh  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/assets/: download_fonts.sh
apps/desktop/frontend/: index.css  tailwind.config.js
apps/desktop/frontend/app/: globals.css
apps/desktop/frontend/hooks/: useLayoutMode.ts
apps/desktop/frontend/styles/: global.css (add at the end)  tokens.css
apps/desktop/scripts/: download-fonts.sh
apps/desktop/src/: app.rs  bootstrap.rs  brand.rs  commands.rs  events.rs  main.rs  message.rs  state.rs  theme.rs  update.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: app_state.rs  lib.rs  main.rs  menu.rs
apps/desktop/src-tauri/src/adapters/: workspace_adapter.rs
apps/desktop/src-tauri/src/bootstrap/: setup.rs
apps/desktop/src-tauri/src/commands/: editor.rs  mod.rs  workspace.rs  zaroxi_infra_settings.rs
apps/desktop/src-tauri/src/menu/: mod.rs
apps/desktop/src-tauri/src/services/: editor_service.rs  mod.rs  theme_service.rs  workspace_service.rs
apps/desktop/src-tauri/src/windows/: mod.rs
apps/desktop/src/app/: App.tsx
apps/desktop/src/explorer/: mod.rs  model.rs  state.rs
apps/desktop/src/settings/: editor.rs  mod.rs  persistence.rs
apps/desktop/src/styles/: globals.css
apps/desktop/src/ui/: activity_bar.rs  assistant_panel.rs  chat.rs  common.rs  editor.rs  editor_panel.rs  explorer.rs  explorer_panel.rs  icons.rs  layout.rs  mod.rs  shell.rs  sidebar.rs  status_bar.rs  style.rs  syntax_editor.rs  terminal.rs  top_bar.rs
apps/desktop/src/update/: assistant.rs  (+7 more)
crates/ai-agent/: Cargo.toml
crates/ai-agent/src/: executor.rs  lib.rs  patch.rs  planner.rs  tools.rs  verify.rs
crates/ai-context/: Cargo.toml
crates/ai-context/src/: collector.rs  lib.rs  packing.rs  prompt.rs  ranking.rs
crates/core-types/: Cargo.toml
crates/core-types/src/: commands.rs  events.rs  ids.rs  lib.rs  protocol.rs
crates/editor-buffer/: Cargo.toml
crates/editor-buffer/src/: buffer.rs  edit.rs  lib.rs  position.rs  selection.rs  undo.rs
crates/editor-core/: Cargo.toml
crates/editor-core/src/: commands.rs  cursor.rs  document.rs  editor.rs  lib.rs  viewport.rs
crates/file-ops/: Cargo.toml
crates/file-ops/src/: file_loader.rs  lib.rs  workspace.rs
crates/language/syntax-core/: build.rs
crates/lsp-client/: Cargo.toml
crates/lsp-client/src/: capabilities.rs  diagnostics.rs  lib.rs  manager.rs  session.rs  transport.rs
crates/operations/file-ops/: Cargo.toml
crates/operations/file-ops/src/: metadata.rs
crates/patch-engine/: Cargo.toml
crates/patch-engine/src/: apply.rs  diff.rs  lib.rs  preview.rs
crates/permissions/: Cargo.toml
crates/permissions/src/: grants.rs  lib.rs  policy.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: client.rs  framing.rs  lib.rs  messages.rs  server.rs
crates/settings/: Cargo.toml
crates/settings/src/: lib.rs  loader.rs  model.rs
crates/syntax-core/: Cargo.toml  build.rs
crates/syntax-core/queries/rust/: highlights.scm
crates/syntax-core/src/: document.rs  dynamic_loader.rs  grammar_builder.rs  grammar_registry.rs  highlight.rs  language.rs  lib.rs  manager.rs  metadata.rs  parser.rs  query_cache.rs  runtime.rs
crates/workspace-model/: Cargo.toml
crates/workspace-model/src/: file_tree.rs  lib.rs  open_editors.rs  project_graph.rs  snapshots.rs  state.rs  workspace.rs
crates/zaroxi-domain-ai-context/: Cargo.toml
crates/zaroxi-domain-ai-context/src/: context.rs  lib.rs  packing.rs  prompt.rs  ranking.rs
crates/zaroxi-domain-editor/: Cargo.toml
crates/zaroxi-domain-editor/src/: document.rs  document_cache.rs  document_syntax_cache.rs  editor.rs  lib.rs  thresholds.rs
crates/zaroxi-domain-workspace/: Cargo.toml
crates/zaroxi-domain-workspace/src/: file_tree.rs  lib.rs  workspace.rs
crates/zaroxi-infra-permissions/: Cargo.toml
crates/zaroxi-infra-rpc/: Cargo.toml
crates/zaroxi-infra-settings/: Cargo.toml
crates/zaroxi-lang-syntax/: Cargo.toml  build.rs
crates/zaroxi-lang-syntax/src/: cache.rs  grammar_registry.rs  highlight.rs  language.rs  lib.rs  manager.rs  parser.rs  runtime.rs
crates/zaroxi-ops-file/src/: file_loader.rs
crates/zaroxi-protocol/: Cargo.toml
crates/zaroxi-protocol/src/: commands.rs  events.rs  lib.rs  workspace.rs
crates/zaroxi-service-ai/: Cargo.toml
crates/zaroxi-service-ai/src/: lib.rs  service.rs  tasks.rs
crates/zaroxi-service-workspace/: Cargo.toml
crates/zaroxi-service-workspace/src/: lib.rs  service.rs  workspace_manager.rs
crates/zaroxi-theme/src/: manager.rs  theme.rs
docs/: architecture.md  crates.md  roadmap.md  rpc.md  security.md
domain/: Cargo.toml
domain/workspace-model/: Cargo.toml
extensions/builtin-markdown/: README.md
extensions/builtin-rust/: README.md
extensions/builtin-typescript/: README.md
infrastructure/: Cargo.toml
language/: Cargo.toml
language/editor-core/src/: document.rs
language/syntax-core/src/: lib.rs
operations/: Cargo.toml
operations/file-ops/: Cargo.toml
runtime/treesitter/: fetch-grammars.sh
scripts/: check-git-index.sh  download-fonts.sh  download_fonts.sh  fix-git-index.sh
services/ai-daemon/: Cargo.toml
services/ai-daemon/src/: main.rs  providers.rs  quotas.rs  routing.rs  streaming.rs
services/workspace-daemon/: Cargo.toml
services/workspace-daemon/src/: files.rs  git.rs  lib.rs  main.rs  tasks.rs  terminal.rs
(+115 files in other folders)
