[workspace]
resolver = "3"
members = [
  # Applications
  "apps/desktop/src-tauri",
  
  # Shared crates - organized by domain
  "crates/core-types",
  "domain/workspace-model",
  "ai/ai-context",
  "ai/ai-agent",
  "infrastructure/rpc",
  "infrastructure/settings",
  "infrastructure/permissions",
  "language/editor-core",
  "language/syntax-core",
  "operations/patch-engine",
  "operations/file-ops",
  "crates/theme",
  
  # Services
  "services/workspace-daemon",
  "services/ai-daemon",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync", "io-util", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
rfd = { version = "0.14", default-features = false, features = ["tokio", "xdg-portal"] }
tree-sitter-rust = "0.24"
tree-sitter-toml = "0.20"
tree-sitter = "0.26.8"
libloading = "0.8"
ureq = { version = "2", features = ["json"] }
tempfile = "3"
cc = "1.0"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
tauri = { version = "2.10.3", features = [] }
