[workspace]
resolver = "3"
members = [
    "editor-core",
    "syntax-core",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.26.8"
tree-sitter-rust = "0.24"
tree-sitter-toml = "0.20"
libloading = "0.8"
ureq = { version = "2", features = ["json"] }
tempfile = "3"
cc = "1.0"
