[package]
name = "syntax-core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tree-sitter = "0.22"
tree-sitter-rust = { version = "0.24", optional = true }
ropey = "1"
thiserror = "2"
log = "0.4"
once_cell = "1"
parking_lot = "0.12"

[features]
default = ["rust"]
rust = ["tree-sitter-rust"]
