[package]
name = "zaroxi-domain-ai-context"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI context collection, ranking, packing, and prompt construction"
authors = ["Zaroxi Team"]
repository = "https://github.com/zaroxi/zaroxi"
readme = "README.md"
rust-version = "1.85.0"

[lib]
name = "zaroxi_domain_ai_context"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Workspace crates
zaroxi-core-ids = { workspace = true }
zaroxi-protocol = { workspace = true }

[features]
default = []
