[package]
name = "zaroxi-domain-editor"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Editor domain models for Zaroxi Studio"

[dependencies]
zaroxi-core-ids = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
ropey = "0.11"
