[package]
name = "zaroxi-infra-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RPC infrastructure for Zaroxi"
authors = ["Zaroxi Team"]
repository = "https://github.com/zaroxi/zaroxi"
readme = "README.md"
rust-version = "1.85.0"

[lib]
name = "zaroxi_infra_rpc"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
