[package]
name = "zaroxi-infra-settings"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Settings infrastructure for Zaroxi"
authors = ["Zaroxi Team"]
repository = "https://github.com/zaroxi/zaroxi"
readme = "README.md"
rust-version = "1.85.0"

[lib]
name = "zaroxi_infra_settings"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
