[package]
name = "zaroxi-lang-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Syntax highlighting and parsing for Zaroxi"
authors = ["Zaroxi Team"]
repository = "https://github.com/zaroxi/zaroxi"
readme = "README.md"
rust-version = "1.85.0"

[lib]
name = "zaroxi_lang_syntax"
path = "src/lib.rs"

[[bin]]
name = "download_grammars"
path = "src/bin/download_grammars.rs"


[dependencies]
tree-sitter = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
libloading = { workspace = true, optional = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
memmap2 = "0.9"
ropey = "1.6"
parking_lot = { workspace = true }
cc = { workspace = true }
toml = "0.8"
zaroxi-theme = { workspace = true }

[features]
default = ["dynamic-loading"]
dynamic-loading = ["libloading"]
