[package]
name = "workspace-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "workspace_daemon"
path = "src/lib.rs"

[[bin]]
name = "workspace-daemon"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
core-types = { path = "../../crates/core-types" }
