[package]
name = "desktop"
version = "0.1.0"
description = "Zaroxi Studio Desktop - Tauri 2 frontend"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["shell-open", "shell-execute"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
parking_lot = "0.12"
log = { workspace = true }

# Internal workspace dependencies
workspace-model = { path = "../../../crates/workspace-model" }
editor-core = { path = "../../../crates/editor-core" }
syntax-core = { path = "../../../crates/syntax-core" }
file-ops = { path = "../../../crates/file-ops" }
settings = { path = "../../../crates/settings" }

[features]
default = []
