[package]
name = "desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zaroxi Desktop - Tauri application"
authors = ["Zaroxi Team"]
repository = "https://github.com/zaroxi/zaroxi"
readme = "README.md"
rust-version = "1.85.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { workspace = true, features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "sync", "time", "io-util"] }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

# Workspace crates
core-types = { path = "../../../crates/core-types" }
editor-core = { path = "../../../language/editor-core" }
workspace-model = { path = "../../../domain/workspace-model" }
ai-context = { path = "../../../ai/ai-context" }
ai-agent = { path = "../../../ai/ai-agent" }
patch-engine = { path = "../../../operations/patch-engine" }
rpc = { path = "../../../infrastructure/rpc" }
settings = { path = "../../../infrastructure/settings" }
permissions = { path = "../../../infrastructure/permissions" }
file-ops = { path = "../../../operations/file-ops" }
syntax-core = { path = "../../../language/syntax-core" }
theme = { path = "../../../crates/theme" }

[features]
default = []

# Profiles are inherited from workspace root
